src/main/java/com/example/studybuddy/errors/UserNotFound.java
package com.example.studybuddy.errors;

public class UserNotFound extends RuntimeException {
    public UserNotFound(Long id) {
        super("User not found: " + id);
    }
}
